--- a/PartyInvites/PartyInvites/Views/Home/MyView.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/MyView.cshtml
@@ -15,6 +15,7 @@
                 We're going to have an executing party. <br />
                 (To do: sell it better. Add picture or something.)
             </p>
+            <a asp-action="RsvpForm">RSVP New</a>
         </div>
     </body>
 </head>
